<resources>
    <string name="app_name">Funfit</string>
    <string name="title_activity_maps">Map</string>
    <string name="app_name_small">funfit</string>
    <string name="search_hint">Search</string>
    <!-- Access Token -->
    <string name="AccessToken">sk.eyJ1Ijoib2NhYmFmb3giLCJhIjoiY2lqY3hqMDB4MDAyaXUxamJkczNib3JxeiJ9.GZUnPHlGvf72R-Kfn2gPWw</string>

    <string-array name="activity_level">
        <item>Sendentary</item>
        <item>Low Active</item>
        <item>Active</item>
        <item>Very Active</item>
    </string-array>

    <string-array name="weight">
        <item>kg</item>
        <item>lb</item>
    </string-array>

    <string-array name="height_measurement">
        <item>cm</item>
        <item>ft/in</item>
    </string-array>


    <string-array name="ft_values">
        <item>3\'</item>
        <item>3\'1"</item>
        <item>3\'2"</item>
        <item>3\'3"</item>
        <item>3\'4"</item>
        <item>3\'5"</item>
        <item>3\'6"</item>
        <item>3\'7"</item>
        <item>3\'8"</item>
        <item>3\'9"</item>
        <item>3\'10"</item>
        <item>3\'11"</item>
        <item>4\'</item>
        <item>4\'1"</item>
        <item>4\'2"</item>
        <item>4\'3"</item>
        <item>4\'4"</item>
        <item>4\'5"</item>
        <item>4\'6"</item>
        <item>4\'7"</item>
        <item>4\'8"</item>
        <item>4\'9"</item>
        <item>4\'10"</item>
        <item>4\'11"</item>
        <item>5\'</item>
        <item>5\'1"</item>
        <item>5\'2"</item>
        <item>5\'3"</item>
        <item>5\'4"</item>
        <item>5\'5"</item>
        <item>5\'6"</item>
        <item>5\'7"</item>
        <item>5\'8"</item>
        <item>5\'9"</item>
        <item>5\'10"</item>
        <item>5\'11"</item>
        <item>6\'</item>
        <item>6\'1"</item>
        <item>6\'2"</item>
        <item>6\'3"</item>
        <item>6\'4"</item>
        <item>6\'5"</item>
        <item>6\'6"</item>
        <item>6\'7"</item>
        <item>6\'8"</item>
        <item>6\'9"</item>
        <item>6\'10"</item>
        <item>6\'11"</item>
        <item>7\'</item>
        <item>7\'1"</item>
        <item>7\'2"</item>
        <item>7\'3"</item>
        <item>7\'4"</item>
        <item>7\'5"</item>
        <item>7\'6"</item>
        <item>7\'7"</item>
        <item>7\'8"</item>
        <item>7\'9"</item>
        <item>7\'10"</item>
        <item>7\'11"</item>

    </string-array>

    <string name="sedentary">Sedentary</string>
    <string name="sedentary_description">Sedentary - Daily activities require minimal effort such as resting, desk work or driving</string>

    <string name="low_active">Low Active</string>
    <string name="low_active_description">Low Active - Daily activities require some effort such as periods of standing, housework or some light exercise</string>

    <string name="active">Active</string>
    <string name="active_description">Active - Daily activities require reasonable effort such as standing, physical work or regular moderate exercise</string>

    <string name="very_active">Very Active</string>
    <string name="very_active_description">Very Active - Daily activities require intense physical effort such as construction work or regular vigorous exercise</string>

    <string name="login">Login</string>
    <string name="action_search">Search</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="broadcast_info">broadcast_foodList</string>
    <string name="broadcastInfo">broadcast_foodInfoList</string>

    <string name="facebook_app_id">472651612918878</string>
    <string name="label_notification">Notifications</string>
    <string name="label_events">Events</string>
    <string name="eventHistory">Event History</string>
    <string name="broadcast_encodedpolyline">BROADCAST_ENCODEDPOLYLINE</string>
    <string name="nav_arena">Arena</string>
    <string name="nav_shack">Shack</string>
    <string name="nav_leaderBoard">Hall of Fame</string>
    <string name="nav_events">Events</string>
    <string name="nav_logout">Logout</string>
    <string name="leaderBoard">Hall of Fame</string>
    <string name="label_signup">Sign Up</string>
    <string name="impulse">impulse</string>
    <string name="velocity">velocity</string>
    <string name="world">Over All</string>
    <string name="Impulse">Impulse</string>
    <string name="Velocity">Velocity</string>


</resources>