<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">
        <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
            android:hint="Weight"/>

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="Height"/>


        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="Diet Goal"/>

        <Spinner
            android:id="@+id/activity_level_spnr"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:entries="@array/activity_level"></Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/sedentary"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/low_active"/>
    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/active"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/very_active"/>
    </LinearLayout>
    <Button
        android:id="@+id/setupBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="Setup"/>
</LinearLayout>